1999-06-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.h: Stringify application name, version, and bug address.
	(Don't require quoting from make.)

1999-06-09  Alex Lancaster  <alex@santafe.edu>

	* simtools.m (_initSwarm_): New function, made from the old init()
	function with a new argument `appName'.  Make non-static.  Pass
	appName to initDefobj() call.
	(init): Remove old internal static function.
	(initSwarm{Batch, App, AppBatch, AppOptions, AppOptionsBatch}):
	Remove functions, now macros in simtools.h.

	* simtools.h (initSwarm): Redefine as a macro. Call new internal
	function _initSwarm_().  If not explicitly set by the macro, pass
	APPNAME, BUGADDRESS, APPVERSION which will be passed from the
	application Makefile to the internal _initSwarm_().
	(initSwarmBatch): Likewise.
	(initSwarmApp): Likewise.
	(initSwarmAppBatch): Likewise.
	(initSwarmAppOptions): Likewise.
	(initSwarmAppOptionsBatch): Likewise
	(_initSwarm_):  Define internal function.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{inst,noinst}LIBS.
	(EXTRA_LTLIBRARIES): New variable.
	(libsimtools_la_LDFLAGS): Substitute inst_LDFLAGS.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.h: Include externvar.h.

	* Makefile.am (INCLUDES): Add -I$(top_builddir)/libobjc.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.m: Add externvardef for swarmGUIMode.

	* simtools.h: Use `externvar' for swarmGUIMode.

1999-05-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.m (init): Use YES and NO explicitly for swarmGUIMode.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES): Switch from lib_LTLIBRARIES.

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* QSort.m: Include swarmconfig.h.
	(cmpObjs): Cast through PTRINT.

1999-04-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
